ClientFiles/css/IDEOnline.css
#wrapper {
    padding: 100px;
	width: 80%;
    position: relative;
}

/*toolbar*/
.toolbar {
    border: 1px solid #0b175c;
    position: fixed;
    top: 75%;
    left: 63%;
    min-width: 700px;
    background-color: #fff;
    z-index: 51; /*Solution explorer has 50, we want it over that*/
    user-select: none;
    -moz-user-select: none;
}
#toolbarHeader {
    padding: 0;
    margin: 0;
    text-align:center;
}
.toolbarBtn, #toolbarLoggingArea, #toolbar_LoginInfo, #toolbarFunctionsArea, #toolbarMicroserviceStatusArea {
    margin: 20px 20px;
}
.leftTollbar {
    width: 70%;
    float: left;
}
.rightToolbar {
    width: 24%;
    float: right;
}
#toolbar_LoginInfo {
    color: #249627;
}
#displayedAvatar {
    left: -50px;
    display: none;
}
.rightToolbar .small-label{
    float: right;
}
.rightToolbar ul {
    list-style-type: none; /*remove list bullets*/
}
.statusIcon {
    width: 17px;
    height: 16px;
}
/*"label for=.." can only bind to ids of form elements, not to text. I used a fake button, with text displayed only*/
.MSinfoBtn {
    background: none;
    border: none;
    margin: 0;
    padding: 0;
}
/*made my own circles by rounding the corners of a square container*/
.circle {
    border-radius: 100%;
    border: 1px solid #000;
    text-align: center;
    display: inline-block;
}
.green {
    background: #5EA226;
    color: #5EA226;
}
.yellow {
    background: #ffc107;
    color: #ffc107;
}
.toolbar_MSInfo {
    background: #fff;
    min-width: 300px;
    max-width: 600px;
    border: 1px solid #000;
    position: absolute;
    padding: 0px, 10px, 10px, 10px;
    margin: 0;
    z-index: 71; /*1 more than the most non-modal element*/
    display: none;
}
.toolbar_MSInfo .article{
    font-family: Arial, Helvetica, sans-serif;
    color: blue;
}
.toolbar_MSInfo .serverDown {
    font-family: Arial, Helvetica, sans-serif;
    color: #ff0000;
    display: none;
}
.optionsIcon {
    height: 25px;
    width: 25px;
}

/*file tabs*/
.tabs {
    height: 45px;
    width: 93%;
    padding: 0 0 0 0;
    user-select: none;
    -moz-user-select: none;
}

.tab {
    width: 130px;
    height: 45px;
    text-align: center;
    overflow: hidden;
    float: left;
    margin: 0 -15px 0 0;
}


.inner-tab {
    height: 47px;
    background: #fff;
    border-radius: 4px;
    border: 1px solid;
    overflow: hidden;
    margin: 0 10px 0 10px;
}

.tab.activeTab {
    z-index: 2;
    position: relative;
    padding-bottom: 1px;
}

#closeButton {
    color: #808080;
    background: #fff;
    top: 0;
    right: 0;
    border: none;
    float:right;
}
#closeButton:hover {
    color:#ff0000;
}

.inner-tab p {
    float: left;
    width: 79%;
}

/*Modals for Welcome and New Project screens*/
.modal-complex {
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bolder;
    text-align: center;
    line-height:30px;
    box-sizing: border-box;
    user-select: none;
    -moz-user-select: none;
    position: absolute;
    top: 20%;
    left: 30%;
    z-index: 100;
}
.modalStretchBackground {
    background: rgba(193, 193, 193, 0.7);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
    display:none;
}
#newProjectDiag {
    background: rgba(193, 193, 193, 1);
    height: 45%;
}
/*checkboxes in new project modal*/
.valid {
    color: #249627;
}
.invalid {
    color: #781010;
}
.modal-complex h1, .modal-complex h2, .modal-complex label:not(#small-label) {
    color: #222;
    text-shadow: 0 1px 1px #555; /*params: horizontal-shadow, vertical-shadow, blur, color*/
}
.small-label {
    font-size: 10px;
    font-weight: normal;
    text-decoration: underline;
}
/*welcome diag*/
#welcomeDiag { /*there's less text in the header here, need to center it more to the right*/
    left: 35%;
}
.bigBtn {
    text-align: center;
    color: #171717;
    font-family: Arial, Helvetica, sans-serif;
}
.welcomeDiagBtn {
    font-size: 25px;
    margin: 30px;
}
.bigBtn:hover {
    color: #0b175c;
}
.selectProjectType, .modal-complex input, .bigBtn {
    border: 1px solid #000;
    border-radius: 10px;
    padding: 5px;
    font-weight: bold;
}
.selectProjectType:hover, .modal-complex input:hover, .bigBtn:hover {
    border-color: #000;
    box-shadow: 3px 8px 8px #888888;
}
.selectProjectType:focus, .modal-complex input:focus {
    border-color: #000;
    box-shadow: 3px 8px 8px #888888;
}
.backToWelcomeDiag {
    color: #0e4215;
}
.backToWelcomeDiag:hover {
    color: #0026ff;
    text-shadow: 0 4px 4px #555;
}
.disabledBtn {
    opacity: 0.3;
    pointer-events: none; /*disable hover effects*/
}

/*Login and Register forms*/
.loginBox {
    width: 320px;
    height: 440px;
    background: #000;
    color: #fff;
    top: 35%;
    left: 40%;
    position: absolute;
    padding: 70px 30px 70px 30px;
    box-sizing: border-box; /*when calculating width, include padding and borders*/
    user-select: none;
    -moz-user-select: none;
    z-index: 101; /*+1 higher than the layer under*/
}
    .loginBox h1 {
        margin:0;
        padding-bottom: 20px;
        text-align: center;
        font-size: 22px;
    }
    .loginBox label {
        font-weight: bold;
    }
    .loginBox input:not(#keepLoggedCheckbox) { /*input fields and buttons*/
        width: 100%;
        margin-bottom: 20px;
    }
    .loginBox .loginInputField {    /*input fields only*/
        border: none;
        border-bottom: 1px solid #fff;
        background: transparent; /*kill color in the edit box, see the background*/
        outline: none; /*An outline is a line that is drawn around elements, outside the borders, to make the element "stand out".*/
        height: 30px;
        color: #fff;
        font-size: 16px;
    }
    .loginBox .loginBoxBtn {
        border: none;
        outline: none;
        height: 30px;
        background: #808080;
        color: #fff;
        font-size: 18px;
        border-radius: 20px;
    }
/* ... */

